WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304518
ASSERTION FAILED: iterator != m_sessionToPageIDsMap.end() in WebProcessPool::pageEndUsingWebsiteDataStore
https://bugs.webkit.org/show_bug.cgi?id=304518
Summary
ASSERTION FAILED: iterator != m_sessionToPageIDsMap.end() in WebProcessPool::...
Sihui Liu
Reported
2025-12-19 13:09:49 PST
rdar://164973464
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 2
2025-12-19 14:22:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55728
Sihui Liu
Comment 3
2025-12-19 14:37:46 PST
rdar://164973265
EWS
Comment 4
2025-12-22 23:25:29 PST
Committed
304892@main
(68a3b2f07d2e): <
https://commits.webkit.org/304892@main
> Reviewed commits have been landed. Closing PR #55728 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug